Update nav bottom Add firebase Add get token device for fcm

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   shimmer: ^2.0.0
   top_snackbar_flutter: ^1.0.0
   flutter_screen_lock: ^9.0.1
+  flutter_local_notifications: ^9.9.1
+  firebase_messaging: ^14.1.0
 
 
 dev_dependencies:
