--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,15 @@ dependencies:
   flutter_screen_lock: ^9.0.1
   flutter_local_notifications: ^9.9.1
   firebase_messaging: ^14.1.0
+  hive_flutter: ^1.1.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 
 flutter:
   uses-material-design: true
