--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,35 +1,35 @@
 name: parkirta
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.0
+  intl: ^0.19.0
   google_maps_flutter: ^2.2.0
   http: ^0.13.3
   shared_preferences: ^2.0.8
   sp_util: ^2.0.0
   cupertino_icons: ^1.0.0
-  geolocator: ^8.0.2
-  permission_handler: any
+  geolocator: ^10.1.0
+  permission_handler: ^6.1.1
   flutter_svg: any
   bitmap: any
   flutter_polyline_points: ^1.0.0
   location: any
   flutter_google_places: ^0.3.0
-  image_picker: ^0.8.9
+  image_picker: ^1.0.4
   fluttertoast: ^8.0.8
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
-  shimmer: ^2.0.0
-  top_snackbar_flutter: ^1.0.0
+  shimmer: ^3.0.0
+  top_snackbar_flutter: ^3.1.0
   flutter_screen_lock: ^9.0.1
-  flutter_local_notifications: ^9.9.1
+  flutter_local_notifications: ^16.2.0
   firebase_messaging: ^14.1.0
   hive_flutter: ^1.1.0
   dio: ^5.3.3
@@ -37,11 +37,10 @@ dependencies:
   iconly: ^1.0.1
   qr_flutter: ^4.1.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
 
@@ -54,7 +53,6 @@ flutter:
     - assets/images/park.png
     - assets/images/yourloc.png
     - assets/images/
-
 
   fonts:
     - family: Inter
